--- a/src/main/resources/templates/products/edit-product.html
+++ b/src/main/resources/templates/products/edit-product.html
@@ -100,7 +100,7 @@
 
                 <!-- Image Upload Field -->
                 <div class="mb-3">
-                    <label class=class="col-sm-4 col-form-label">Image</label>
+                    <label class="col-sm-4 col-form-label">Image</label>
                     <div class="col-sm-8">
                         <input class="form-control" type="file" th:field="*{imageFile}" accept="image/*">
                         <small class="form-instructions">Leave this empty to keep the current image.</small>
