--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -219,7 +219,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4e4ffa;}
     height: 100%;
     background: rgba(42,45,84,.60);
 }
-.header-area{position: absolute;top:0;left:0;width: 100%;z-index: 99;}
+.header-area{position: absolute;top:0;left:0;width: 100%;z-index: 99; }
 
 /*.welcome-hero-txt*/
 .welcome-hero-txt{text-align: center;padding:290px 0 372px;}
@@ -229,14 +229,15 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4e4ffa;}
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 45px;
+    margin-left: 20px;
 }
 .welcome-hero-txt p {
+    margin-left: 20px;
     font-size: 18px;
     text-transform: initial;
     color: #fff;
     font-weight: 500;
     max-width: 735px;
-    margin: 0 auto;
 }
 .welcome-btn {
     display: inline-block;
@@ -251,6 +252,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4e4ffa;}
     -ms-transition:.3s linear; 
     -o-transition:.3s linear;
     transition: .3s linear;
+    margin-left: 20px;
 }
 .welcome-btn:hover{
     background: #0102fa;
@@ -709,4 +711,6 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4e4ffa;}
     0%   {bottom:0px;}
     100%  {bottom:7px;}
 }
+
+
 /*========================Thank you=================
