--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,10 +84,8 @@
                             <li class="scroll"><a href="#brand">brands</a></li>
                             <li class="scroll"><a href="#contact">Contact</a></li>
                             <!-- Login and Register Links -->
-                            <li>
-                                <a th:href="@{/login}">
-                                    <i class="fa fa-user"></i>
-                                </a>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/login}" id="openLoginModal">Login</a>
                             </li>
                         </ul><!--/.nav -->
                     </div><!-- /.navbar-collapse -->
