--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="no-js" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" class="no-js" lang="en"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
 <head>
     <!-- meta data -->
     <meta charset="utf-8">
@@ -84,8 +85,14 @@
                             <li class="scroll"><a href="#brand">brands</a></li>
                             <li class="scroll"><a href="#contact">Contact</a></li>
                             <!-- Login and Register Links -->
-                            <li class="nav-item">
-                                <a class="nav-link" th:href="@{/login}" id="openLoginModal">Login</a>
+                            <li sec:authorize="isAuthenticated()" class="dropdown">  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                <span th:text="${firstName}"></span>  <span th:text="${lastName}"></span>   <span class="caret"></span>  </a>
+                                <ul class="dropdown-menu">
+                                    <li><a th:href="@{/logout}" class="logout-link">Logout</a></li>  </ul>
+                            </li>
+
+                            <li sec:authorize="!isAuthenticated()">
+                                <a th:href="@{/login}">Login</a>
                             </li>
                         </ul><!--/.nav -->
                     </div><!-- /.navbar-collapse -->
